// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic rendering case snapshot 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  box-sizing: content-box;
  height: 0;
  width: 100%;
  padding: 0;
  border: 0;
  border-bottom: 1px solid lightgray;
  outline: 0;
  margin: 1.5em 0;
}

<hr
  class="c0"
  style="color:orange;font-size:16px"
/>
`;

exports[`basic rendering case snapshot with theme 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  box-sizing: content-box;
  height: 0;
  width: 100%;
  padding: 0;
  border: 0;
  border-bottom: 1px solid orange;
  outline: 1px dash red;
  margin: 2rem 0;
}

<hr
  class="c0"
  style="color:orange;font-size:16px"
/>
`;
